--- a/floor-plan/package.json
+++ b/floor-plan/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "firebase": "^10.8.0",
     "next": "^14.1.0",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18"
   },
