--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "devDependencies": {
-    "cypress": "^13.6.6",
-    "jest": "^29.7.0"
+    "@testing-library/cypress": "^10.0.1",
+    "cypress": "^13.7.1",
+    "cypress-social-logins": "^1.14.1",
+    "next": "^14.1.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
