--- a/floor-plan/package.json
+++ b/floor-plan/package.json
@@ -6,35 +6,25 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "test": "jest",
-    "test:e2e:open": "cypress open",
-    "test:e2e:run": "cypress run"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@firebase/firestore": "^4.5.0",
-    "@firebase/storage": "^0.12.2",
+    "@react-pdf/renderer": "^3.4.0",
     "firebase": "^10.8.0",
-    "formidable": "^3.5.1",
     "next": "^14.1.0",
     "next-auth": "^4.24.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-pdf": "^7.7.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.23.9",
     "@babel/core": "^7.23.9",
-    "@testing-library/cypress": "^10.0.1",
     "@types/node": "^20",
-    "@types/formidable": "^3.4.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "cypress": "^13.6.6",
-    "cypress-social-logins": "^1.14.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
-    "jest": "^29.7.0",
     "typescript": "^5"
   }
- 
 }
