--- a/floor-plan/package.json
+++ b/floor-plan/package.json
@@ -25,6 +25,8 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "cypress": "^13.6.6",
+    "jest": "^29.7.0"
   }
 }
