--- a/floor-plan/package.json
+++ b/floor-plan/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:e2e:open": "cypress open",
+    "test:e2e:run": "cypress run",
+    "test": "jest"
   },
   "dependencies": {
     "@react-pdf/renderer": "^3.4.0",
@@ -20,13 +23,19 @@
   "devDependencies": {
     "@babel/cli": "^7.23.9",
     "@babel/core": "^7.23.9",
+    "@testing-library/cypress": "^10.0.1",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "cypress": "^13.6.6",
+    "cypress-social-logins": "^1.14.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
-    "typescript": "^5",
-    "cypress": "^13.6.6",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5"
   }
 }
