--- a/floor-plan/package.json
+++ b/floor-plan/package.json
@@ -16,6 +16,7 @@
     "firebase": "^10.8.0",
     "next": "^14.1.0",
     "next-auth": "^4.24.7",
+    "next-router-mock": "^0.9.13",
     "react": "^18",
     "react-dom": "^18",
     "react-pdf": "^7.7.1"
