--- a/floor-plan/package.json
+++ b/floor-plan/package.json
@@ -22,6 +22,7 @@
     "pspdfkit": "^2024.2.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.1.0",
     "react-pdf": "^7.7.1"
   },
   "devDependencies": {
