allow for displaying pdf and using icons

--- a/floor-plan/package.json
+++ b/floor-plan/package.json
@@ -14,11 +14,13 @@
   "dependencies": {
     "@react-pdf-viewer/thumbnail": "^3.12.0",
     "@react-pdf/renderer": "^3.4.0",
+    "fabric": "^5.3.0",
     "firebase": "^10.8.0",
     "lucide-react": "^0.364.0",
     "next": "^14.1.0",
     "next-auth": "^4.24.7",
     "next-router-mock": "^0.9.13",
+    "pdfjs-dist": "^3.11.174",
     "pspdfkit": "^2024.2.0",
     "react": "^18",
     "react-dom": "^18",
@@ -31,6 +33,7 @@
     "@testing-library/cypress": "^10.0.1",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.2",
+    "@types/fabric": "^5.3.7",
     "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
