--- a/floor-plan/package.json
+++ b/floor-plan/package.json
@@ -16,6 +16,7 @@
     "@react-pdf/renderer": "^3.4.0",
     "fabric": "^5.3.0",
     "firebase": "^10.8.0",
+    "jspdf": "^2.5.1",
     "lucide-react": "^0.364.0",
     "next": "^14.1.0",
     "next-auth": "^4.24.7",
