--- a/floor-plan/package.json
+++ b/floor-plan/package.json
@@ -12,6 +12,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-pdf-viewer/thumbnail": "^3.12.0",
     "@react-pdf/renderer": "^3.4.0",
     "fabric": "^5.3.0",
