--- a/floor-plan/package.json
+++ b/floor-plan/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production node server.js",
     "lint": "next lint",
     "test:e2e:open": "cypress open",
     "test:e2e:run": "cypress run",
@@ -17,6 +17,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-pdf-viewer/thumbnail": "^3.12.0",
     "@react-pdf/renderer": "^3.4.0",
+    "express": "^4.21.0",
     "fabric": "^5.3.0",
     "firebase": "^10.8.0",
     "jspdf": "^2.5.1",
@@ -29,7 +30,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.1.0",
-    "react-pdf": "^7.7.1"
+    "react-pdf": "^7.7.1",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.23.9",
