--- a/floor-plan/tsconfig.json
+++ b/floor-plan/tsconfig.json
@@ -13,6 +13,9 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "types": [
+      "node", "jest", "@testing-library/jest-dom"
+    ],
     "plugins": [
       {
         "name": "next"
@@ -22,6 +25,13 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/fileContext.jsx"],
+  "include": [
+    "next-env.d.ts", 
+    "**/*.ts", 
+    "**/*.tsx", 
+    ".next/types/**/*.ts", 
+    "src/app/fileContext.jsx",
+    "test.d.ts"
+  ],
   "exclude": ["node_modules"]
 }
