--- a/floor-plan/package.json
+++ b/floor-plan/package.json
@@ -17,7 +17,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-pdf-viewer/thumbnail": "^3.12.0",
     "@react-pdf/renderer": "^3.4.0",
-    "express": "^4.21.0",
+    "express": "^4.21.1",
     "fabric": "^5.3.0",
     "firebase": "^10.8.0",
     "jspdf": "^2.5.1",
@@ -29,6 +29,7 @@
     "pspdfkit": "^2024.2.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-feather": "^2.0.10",
     "react-icons": "^5.1.0",
     "react-pdf": "^7.7.1",
     "socket.io": "^4.7.5",
